--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -49,7 +49,7 @@
     </div><!-- /.article-wrap -->
   </article>
 </div><!-- /#index -->
-
+{% include comments.html %}
 <div class="footer-wrap">
   <footer>
     {% include footer.html %}
